# edge-system-qualification

./: .gitignore  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-docs.txt  versions.json
.github/: CODEOWNERS  copilot-instructions.md
.github/workflows/: docs-build.yml  docs-deploy.yml  zizmor-scan.yaml
2025.2/: 404.html  index.html  sitemap.xml
2025.2/about/: index.html
2025.2/about/changelog/: index.html
2025.2/about/license/: index.html
2025.2/about/support/: index.html
2025.2/assets/: index.html
2025.2/getting-started/: index.html
2025.2/getting-started/quick-start/: index.html
2025.2/getting-started/suites/: index.html
2025.2/guides/: index.html
2025.2/guides/developer/: index.html
2025.2/guides/optimization/: index.html
2025.2/guides/troubleshooting/: index.html
2025.2/search/: search_index.json
2025.2/stylesheets/: extra.css
2026.1/: 404.html  index.html  sitemap.xml
2026.1/about/: index.html
2026.1/about/changelog/: index.html
2026.1/about/license/: index.html
2026.1/about/support/: index.html
2026.1/assets/: index.html
2026.1/getting-started/: index.html
2026.1/getting-started/quick-start/: index.html
2026.1/getting-started/suites/: index.html
2026.1/guides/: index.html
2026.1/guides/developer/: index.html
2026.1/guides/developer-quick-reference/: index.html
2026.1/guides/optimization/: index.html
2026.1/guides/troubleshooting/: index.html
2026.1/overrides/: home.html
2026.1/search/: search_index.json
docs/about/: changelog.md  index.md  license.md  support.md
docs/assets/: README.md
docs/getting-started/: index.md  quick-start.md
docs/getting-started/suites/: index.md  manufacturing.md  retail.md
docs/getting-started/telemetry/: index.md
docs/guides/: developer-quick-reference.md  developer.md  index.md  optimization.md  troubleshooting.md
docs/guides/developer/: advanced.md  allure-reports.md  assets.md  configuration.md  fixtures.md  index.md  kpi-validation.md  quick-reference.md  requirements.md  results-metrics.md  telemetry.md  writing-tests.md
docs/overrides/: home.html
docs/stylesheets/: extra.css
main/: 404.html  index.html  sitemap.xml
main/about/: index.html
main/about/changelog/: index.html
main/about/license/: index.html
main/about/support/: index.html
main/assets/: index.html
main/getting-started/: index.html
main/getting-started/quick-start/: index.html
main/getting-started/suites/: index.html
main/getting-started/telemetry/: index.html
main/guides/: index.html
main/guides/developer/: index.html
main/guides/developer-quick-reference/: index.html
main/guides/developer/advanced/: index.html
main/guides/developer/allure-reports/: index.html
main/guides/developer/assets/: index.html
main/guides/developer/configuration/: index.html
main/guides/developer/fixtures/: index.html
main/guides/developer/kpi-validation/: index.html
main/guides/optimization/: index.html
main/guides/troubleshooting/: index.html
main/search/: search_index.json
scripts/: allure3-dev.sh  setup-powercap-permissions.sh  system-setup.sh
src/esq/: __init__.py  _version.py
src/esq/suites/: __init__.py
src/esq/utils/: __init__.py  genutils.py
src/sysagent/: __init__.py  _version.py  cli.py  pyproject.toml
src/sysagent/configs/core/: dependencies.yml
src/sysagent/configs/core/patches/allure3/: 250917-allure3-v3.0.0-beta.15.patch  251016-allure3-v3.0.0-beta.15.patch  allure3-v3.0.0-beta.15.patch
src/sysagent/configs/profiles/examples/: README.md  edge_system_performance.yml
src/sysagent/configs/profiles/qualifications/: README.md
src/sysagent/configs/profiles/suites/: README.md
src/sysagent/configs/reports/allure/: allurerc.mjs
src/sysagent/configs/system/info/: software.yml
src/sysagent/suites/: __init__.py
src/sysagent/suites/core/: __init__.py
src/sysagent/suites/core/cli/: __init__.py  config.yml  test_log.py  test_summary.py  test_system.py
src/sysagent/suites/examples/: __init__.py
src/sysagent/suites/examples/docker/: README.md  config.yml  test_docker_system_performance.py
src/sysagent/suites/examples/docker/src/: Dockerfile  sysbench_analysis.py  sysbench_benchmark.sh
src/sysagent/utils/: __init__.py
src/sysagent/utils/cli/: __init__.py  handlers.py  helpers.py  parsers.py
src/sysagent/utils/cli/commands/: __init__.py  attach.py  clean.py  deps.py  info.py  list.py  report.py  run.py  summary.py
src/sysagent/utils/cli/filters/: __init__.py  consolidator.py  matcher.py  parser.py
src/sysagent/utils/config/: __init__.py  config.py  config_loader.py  profile_dependencies.py
src/sysagent/utils/core/: __init__.py  cache.py  kpi.py  process.py  result.py  shared_state.py  venv.py
src/sysagent/utils/core/dependencies/: __init__.py  loader.py  manager.py  schema.py  validator.py
src/sysagent/utils/infrastructure/: __init__.py  docker_client.py  network.py  node.py  setup_dependency.py
src/sysagent/utils/logging/: __init__.py  logging_config.py
src/sysagent/utils/plugins/: __init__.py  pytest_allure.py  pytest_cache.py  pytest_execution.py  pytest_parameterization.py  pytest_suite.py  pytest_summarization.py  pytest_telemetry.py  pytest_validation.py
src/sysagent/utils/reporting/: __init__.py  visualization.py
src/sysagent/utils/reporting/allure/: __init__.py  config.py  generator.py  patch.py  utils.py
src/sysagent/utils/reporting/summary/: __init__.py  extractor.py  generator.py  parser.py  table.py
src/sysagent/utils/system/: __init__.py  cache.py  cpu.py  formatter.py  gpu.py  gpu_devices.py  hardware.py  info.py  memory.py  ov_helper.py  pci_helper.py  power.py  software.py
src/sysagent/utils/telemetry/: __init__.py  base.py  collector.py  kpi_correlation.py  registry.py
src/sysagent/utils/telemetry/modules/: __init__.py  cpu_freq.py  cpu_temp.py  cpu_usage.py  memory_usage.py
src/sysagent/utils/testing/: __init__.py  parameterization.py  profile_validator.py  pytest_config.py  system_validator.py  tier_validator.py  validation_suggestions.py
(+238 files in other folders)
