[build-system]
requires = ["setuptools>=80", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esq"
dynamic = ["version"]
description = "Edge System Qualification (ESQ) package for evaluating and qualifying edge computing systems"
readme = "README.md"
authors = [
    {name = "esq"}
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.3",
    "pytest==9.0.1",
    "allure-pytest==2.15.0",
    "pytest-check==2.6.0",
    "rich==14.2.0",
    "tqdm==4.67.1",
    "tomli==2.3.0",
    "matplotlib==3.10.7",
    "psutil==7.1.3",
    "py-cpuinfo==9.0.0",
    "requests==2.33.0",
    "openvino==2025.4.1",
    "docker==7.1.0",
    "pydub==0.25.1",
    "httpx==0.28.1",
    "huggingface-hub==0.36.0",
    "modelscope==1.34.0",
    "datasets==4.5.0",
    "transformers==4.55.4",
    "openvino_tokenizers==2025.4.1.0",
    "Jinja2==3.1.6",
    "optimum-intel==1.27.0",
    "ultralytics==8.3.232",
    "kagglehub==0.3.13",
    "py-libnuma==1.2",
    "nncf==2.18.0",
    "timm==1.0.22",
    # Nested dependencies
    "about-time==4.2.1",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "alive-progress==3.3.0",
    "allure-python-commons==2.15.0",
    "anyio==4.12.1",
    "attrs==25.4.0",
    "autograd==1.8.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "cma==4.4.4",
    "contourpy==1.3.3",
    "cuda-bindings==12.9.4",
    "cuda-pathfinder==1.4.2",
    "cycler==0.12.1",
    "deprecated==1.3.1",
    "dill==0.4.0",
    "filelock==3.25.2",
    "fonttools==4.62.0",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "graphemeu==0.7.2",
    "h11==0.16.0",
    "hf-xet==1.4.1",
    "httpcore==1.0.9",
    "idna==3.11",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "moocore==0.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "natsort==8.4.0",
    "networkx==3.4.2",
    "ninja==1.13.0",
    "numpy==2.2.6",
    "nvidia-cublas-cu12==12.8.4.1",
    "nvidia-cuda-cupti-cu12==12.8.90",
    "nvidia-cuda-nvrtc-cu12==12.8.93",
    "nvidia-cuda-runtime-cu12==12.8.90",
    "nvidia-cudnn-cu12==9.10.2.21",
    "nvidia-cufft-cu12==11.3.3.83",
    "nvidia-cufile-cu12==1.13.1.3",
    "nvidia-curand-cu12==10.3.9.90",
    "nvidia-cusolver-cu12==11.7.3.90",
    "nvidia-cusparse-cu12==12.5.8.93",
    "nvidia-cusparselt-cu12==0.7.1",
    "nvidia-nccl-cu12==2.27.5",
    "nvidia-nvjitlink-cu12==12.8.93",
    "nvidia-nvshmem-cu12==3.4.5",
    "nvidia-nvtx-cu12==12.8.90",
    "onnx==1.21.0",
    "opencv-python==4.13.0.92",
    "openvino-telemetry==2025.2.0",
    "optimum==2.1.0",
    "optimum-onnx==0.1.0",
    "packaging==26.0",
    "pandas==2.3.3",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "pluggy==1.6.0",
    "polars==1.39.0",
    "polars-runtime-32==1.39.0",
    "propcache==0.4.1",
    "protobuf==7.34.1",
    "pyarrow==23.0.1",
    "pycparser==3.0",
    "pydot==3.0.4",
    "pygments==2.20.0",
    "pymoo==0.6.1.6",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2026.1.post1",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "setuptools==82.0.1",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.21.4",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "triton==3.6.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "ultralytics-thop==2.0.18",
    "urllib3==2.6.3",
    "wrapt==2.1.2",
    "xxhash==3.6.0",
    "yarl==1.23.0",
]

[project.scripts]
esq = "sysagent.cli:main"

[project.entry-points.sysagent]
sysagent_suites = "esq"
sysagent_configs = "esq"

[project.entry-points.pytest11]
sysagent_plugin = "sysagent.utils.plugins"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sysagent", "esq"]

[tool.setuptools.package-data]
sysagent = [
  "configs/**/*",
  "suites/**/*",
  "utils/**/*"
]
esq = [
  "configs/**/*",
  "suites/**/*",
  "utils/**/*",
  "pyproject.toml"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "only-version"  # e.g., tag 1.0.0: on main -> 1.1.0.devN+gabcdef
local_scheme = "node-and-date"            # include commit hash and date
root = "."                                # root of the git repo

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist"
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.sysagent]
github_dependencies = [
  { name = "edge-developer-kit-reference-scripts", url = "https://github.com/intel/edge-developer-kit-reference-scripts.git", ref = "4f05e9a" },
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
