[build-system]
requires = ["setuptools>=80", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esq"
dynamic = ["version"]
description = "Edge System Qualification (ESQ) package for evaluating and qualifying edge computing systems"
readme = "README.md"
authors = [
    {name = "esq"}
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "pyyaml==6.0.3",
    "pytest==9.1.1",
    "allure-pytest==2.16.0",
    "pytest-check==2.8.0",
    "rich==15.0.0",
    "tqdm==4.68.3",
    "tomli==2.4.1",
    "matplotlib==3.11.0",
    "psutil==7.2.2",
    "py-cpuinfo==9.0.0",
    "requests==2.34.2",
    "openvino==2026.1.0",
    "docker==7.1.0",
    "pydub==0.25.1",
    "httpx==0.28.1",
    "huggingface-hub==1.20.1",
    "modelscope==1.37.1",
    "datasets==5.0.0",
    "transformers==5.12.1",
    "openvino_tokenizers==2026.1.0.0",
    "jinja2==3.1.6",
    "ultralytics==8.4.75",
    "kagglehub==1.0.2",
    "py-libnuma==1.2",
    "nncf==3.2.0",
    "timm==1.0.27",
    "torch==2.12.1",
    # nested dependencies
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "allure-python-commons==2.16.0",
    "annotated-doc==0.0.4",
    "anyio==4.14.0",
    "attrs==26.1.0",
    "certifi==2026.6.17",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "contourpy==1.3.3",
    "cuda-bindings==13.3.1",
    "cuda-pathfinder==1.5.5",
    "cuda-toolkit==13.0.2",
    "cycler==0.12.1",
    "dill==0.4.1",
    "filelock==3.29.4",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "fsspec==2026.4.0",
    "h11==0.16.0",
    "hf-xet==1.5.1",
    "httpcore==1.0.9",
    "idna==3.18",
    "iniconfig==2.3.0",
    "joblib==1.5.3",
    "kagglesdk==0.1.30",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.2.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "multiprocess==0.70.19",
    "narwhals==2.22.1",
    "networkx==3.4.2",
    "ninja==1.13.0",
    "numpy==2.4.6",
    "nvidia-cublas==13.1.1.3",
    "nvidia-cuda-cupti==13.0.85",
    "nvidia-cuda-nvrtc==13.0.88",
    "nvidia-cuda-runtime==13.0.96",
    "nvidia-cudnn-cu13==9.20.0.48",
    "nvidia-cufft==12.0.0.61",
    "nvidia-cufile==1.15.1.6",
    "nvidia-curand==10.4.0.35",
    "nvidia-cusolver==12.0.4.66",
    "nvidia-cusparse==12.6.3.3",
    "nvidia-cusparselt-cu13==0.8.1",
    "nvidia-ml-py==13.610.43",
    "nvidia-nccl-cu13==2.29.7",
    "nvidia-nvjitlink==13.0.88",
    "nvidia-nvshmem-cu13==3.4.5",
    "nvidia-nvtx==13.0.85",
    "opencv-python==4.13.0.92",
    "openvino-telemetry==2025.2.0",
    "packaging==26.2",
    "pandas==3.0.3",
    "pillow==12.2.0",
    "pluggy==1.6.0",
    "polars==1.42.0",
    "polars-runtime-32==1.42.0",
    "propcache==0.5.2",
    "protobuf==7.35.1",
    "pyarrow==24.0.0",
    "pydot==3.0.4",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "regex==2026.5.9",
    "safetensors==0.8.0",
    "scikit-learn==1.9.0",
    "scipy==1.18.0",
    "setuptools==81.0.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "tabulate==0.10.0",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "torchvision==0.27.1",
    "triton==3.7.1",
    "typer==0.25.1",
    "typing-extensions==4.15.0",
    "ultralytics-thop==2.0.20",
    "urllib3==2.7.0",
    "xxhash==3.7.0",
    "yarl==1.24.2",
]

[project.scripts]
esq = "sysagent.cli:main"

[project.entry-points.sysagent]
sysagent_suites = "esq"
sysagent_configs = "esq"
sysagent_telemetry = "esq.utils.telemetry.modules"

[project.entry-points.pytest11]
sysagent_plugin = "sysagent.utils.plugins"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sysagent", "esq"]

[tool.setuptools.package-data]
sysagent = [
  "configs/**/*",
  "suites/**/*",
  "utils/**/*"
]
esq = [
  "configs/**/*",
  "suites/**/*",
  "utils/**/*",
  "pyproject.toml"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
version_scheme = "only-version"  # e.g., tag 1.0.0: on main -> 1.1.0.devN+gabcdef
local_scheme = "node-and-date"            # include commit hash and date
root = "."                                # root of the git repo

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
  ".git",
  "__pycache__",
  ".venv",
  "venv",
  "build",
  "dist"
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.ruff.lint]
extend-select = ["E501"]

[tool.sysagent]
github_dependencies = [
  { name = "edge-developer-kit-reference-scripts", url = "https://github.com/intel/edge-developer-kit-reference-scripts.git", ref = "4f05e9a" },
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
