[build-system]
requires = ["setuptools>=80", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sysagent"
dynamic = ["version"]
description = "A flexible, extensible CLI framework for system management."
readme = "README.md"
authors = [
    {name = "sysagent"}
]
license = "Apache-2.0"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Operating System :: OS Independent",
]
requires-python = ">=3.11"
dependencies = [
    "pyyaml==6.0.3",
    "pytest==9.0.1",
    "allure-pytest==2.15.0",
    "pytest-check==2.6.0",
    "rich==14.2.0",
    "tqdm==4.67.1",
    "tomli==2.3.0",
    "matplotlib==3.10.7",
    "psutil==7.1.3",
    "py-cpuinfo==9.0.0",
    "requests==2.33.0",
    "openvino==2025.4.1",
    # Nested dependencies
    "allure-python-commons==2.15.0",
    "attrs==25.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "fonttools==4.62.0",
    "idna==3.11",
    "iniconfig==2.3.0",
    "kiwisolver==1.5.0",
    "markdown-it-py==4.0.0",
    "mdurl==0.1.2",
    "numpy==2.3.5",
    "openvino-telemetry==2025.2.0",
    "packaging==26.0",
    "pillow==12.1.1",
    "pluggy==1.6.0",
    "pygments==2.20.0",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "urllib3==2.6.3",
]

[project.scripts]
sysagent = "sysagent.cli:main"

[project.entry-points.pytest11]
sysagent_plugin = "sysagent.utils.plugins"

[tool.setuptools.packages.find]
where = ["../../src"]
include = ["sysagent"]

[tool.setuptools_scm]
version_scheme = "only-version"  # e.g., tag 1.0.0: on main -> 1.1.0.devN+gabcdef
local_scheme = "node-and-date"            # include commit hash and date
root = "../.."                            # root of the git repo

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = [
  "-p no:logging"
]

[tool.sysagent]
node_version = "v24.11.0"
allure_version = "v3.0.0-beta.15"
github_dependencies = [
  { name = "allure3", url = "https://github.com/allure-framework/allure3.git", ref = "v3.0.0-beta.15" },
]
